// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> componentDidMount 1`] = `
<div
  className="App"
>
  <div
    className="Header"
  >
    <h1>
      red-rhinoceros
    </h1>
    <h2>
      2.0.0-alpha.4
    </h2>
  </div>
</div>
`;

exports[`<App /> constructor 1`] = `
<div
  className="App"
>
  <div
    className="Header"
  >
    <h1>
      
    </h1>
    <h2>
      
    </h2>
  </div>
</div>
`;
